--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -9,3 +9,9 @@ html,body{
 #app{
   height: 100%;
 }
+.el-breadcrumb {
+  padding-left: 10px;
+  line-height: 50px;
+  font-size: 16px;
+  background-color: #ccc;
+}
